LEP-6563 Use better package names
git-svn-id: svn://svn.liferay.com/repos/public/portal/trunk@17570 05bdf26c-840f-0410-9ced-eb539d925f36